# debdelta.py

debdelta/: debdelta  debdelta-upgrade.1  debdeltas_publisher  debdeltas_server  debdeltas_server.conf  deltas_history.py  deltas_queue.py  setup.cfg
debdelta/contrib/: findurl.py  parse_dist
debdelta/debdelta/: __init__.py  __main__.py  control.py  debdelta.py  debdelta_repo.py  debdeltas_publisher.py  debdeltas_server.py  delta_upgrade.py  deltas_history.py  deltas_queue.py  history.py  publisher.py  queue.py  repo.py  server.py  utils.py
debdelta/debian/: changelog  control  copyright  postinst  rules
debdelta/keyrings/: pub.gpg  pubring.gpg
debdelta/manpages/: debdelta-upgrade.1
debdelta/po/: fr.mo  fr.po  it.mo  it.po  messages.pot  pt.mo  pt.po
debforensic/: debforensic
