[metadata]
name = debdelta
#version = 0.1
maintainer = A Mennucc1
maintainer_email = mennucc1@debian.org
url = https://salsa.debian.org/mennucc1/debdelta
description = diff and patch utilities which work with Debian packages
long_description = debdelta is a program suite designed to compute changes between Debian packages. These changes (deltas) are similar to the output of the "diff" program in that they may be used to store and transmit only the changes between Debian packages.
keywords = version, parsing
license = GPL-3.0
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved :: GNU GPL v3
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = debdelta
setup_requires = setuptools_scm;
extras_requires = 
    recommends = python-debian, python-apt
